...
@Composable
fun ProductsScreen(navController: NavHostController) {
    val products = DataSource.getProducts()

    Column(modifier = Modifier.padding(top = 16.dp, start = 8.dp, end = 8.dp)) { // Adjusted padding for Column
        Text(
            "Products List",
            modifier = Modifier.padding(start = 8.dp, bottom = 16.dp) // Padding for the title
        )
        LazyVerticalGrid(
            columns = GridCells.Fixed(2),
            contentPadding = PaddingValues(8.dp),      // Padding around the entire grid content
            verticalArrangement = Arrangement.spacedBy(8.dp),   // Spacing between rows
...
