...

    BottomAppBar {
        IconButton(onClick = { navController.navigate("home_route") }) { // Assuming "home_route"
            Icon(imageVector = Icons.Filled.Home, contentDescription = "Home")
        }
        IconButton(onClick = { navController.navigate("products") }) {
            Icon(imageVector = Icons.Filled.Store, contentDescription = "Shop")
        }
        IconButton(onClick = { navController.navigate("cart") }) { // Updated for cart
            BadgedBox(badge = {
                if (cartItemCount > 0) {
                    Badge { Text(cartItemCount.toString()) }
                }
...
