...
fun ProductActionButtons(
    product: Product,
    isInWishlist: Boolean,
    onAddToCartClick: () -> Unit,
    onToggleWishlistClick: () -> Unit
) {
    Button( // "Add to Cart" Button
        onClick = onAddToCartClick,
        shape = MaterialTheme.shapes.medium,
        elevation = ButtonDefaults.buttonElevation(defaultElevation = 4.dp),
        colors = ButtonDefaults.buttonColors(
            containerColor = MaterialTheme.colorScheme.primary,
            contentColor = MaterialTheme.colorScheme.onPrimary
...
